add bodylock script back in, update service worker cache version

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	    <link rel="shortcut icon" type="image/ico" href="assets/favicon.ico" />
 		<link rel="stylesheet" href="styles.css" />
 		<script src="smoothscroll.js"></script>
-		<!-- <script src="bodylock.js"></script> -->
+		<script src="bodylock.js"></script>
 		<script type="text/javascript">
 			
 			if ('serviceWorker' in navigator) {
