unregister service worker

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 			    navigator.serviceWorker.register('sw.js').then(function(registration) {
 			      // Registration was successful
 			      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+			      registration.unregister().then(function(boolean) {
+				      // if boolean = true, unregister is successful
+				      if (boolean === true) {
+				      	console.log("successful unregister")
+				      }
+				    });
 			    }, function(err) {
 			      // registration failed :(
 			      console.log('ServiceWorker registration failed: ', err);
