added in fontawesome icons; added sweetalert.js; added in sticky button to copy loadout to clipboard;

--- a/index.html
+++ b/index.html
@@ -10,30 +10,34 @@
 	    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
 	    <link rel="shortcut icon" type="image/ico" href="assets/favicon.ico" />
-		<link rel="stylesheet" href="styles.css" />
-		<script src="smoothscroll.js"></script>
-		<script src="bodylock.js"></script>
+		<link rel="stylesheet" href="css/styles.css" />
+		<link rel="stylesheet" href="css/font-awesome.min.css" />
+		<script src="js/smoothscroll.js"></script>
+		<script src="js/sweetalert.js"></script>
+		<script src="js/bodylock.js"></script>
+		<script defer src="js/all.js"></script>
 		<script type="text/javascript">
 			
-			if ('serviceWorker' in navigator) {
-			  window.addEventListener('load', function() {
-			    navigator.serviceWorker.register('sw.js').then(function(registration) {
-			      // Registration was successful
-			      console.log('ServiceWorker registration successful with scope: ', registration.scope);
-			      registration.unregister().then(function(boolean) {
-				      // if boolean = true, unregister is successful
-				      if (boolean === true) {
-				      	console.log("successful unregister")
-				      }
-				    });
-			    }, function(err) {
-			      // registration failed :(
-			      console.log('ServiceWorker registration failed: ', err);
-			    });
-			  });
-			}
+			// if ('serviceWorker' in navigator) {
+			//   window.addEventListener('load', function() {
+			//     navigator.serviceWorker.register('sw.js').then(function(registration) {
+			//       // Registration was successful
+			//       console.log('ServiceWorker registration successful with scope: ', registration.scope);
+			//       registration.unregister().then(function(boolean) {
+			// 	      // if boolean = true, unregister is successful
+			// 	      if (boolean === true) {
+			// 	      	console.log("successful unregister")
+			// 	      }
+			// 	    });
+			//     }, function(err) {
+			//       // registration failed :(
+			//       console.log('ServiceWorker registration failed: ', err);
+			//     });
+			//   });
+			// }
 			
 		</script>
+		
 	</head>
 
 	<body>
@@ -49,8 +53,9 @@
 			<input type="button" id="button1" class="button1" value="Generate Class" onclick="timeout();" />
 			<br />
 			
-			<div class="middle">	
+			<div class="middle">
 				<div class="outputs" id="outputs">
+					<div class="sticky"><button class="copytoclipboard" onclick="copyToClipboard()"><i class="fas fa-copy"></i></button></div>
 					<h2><u>Primary Weapon:</u></h2>
 					<h3>
 						<span id="primary"></span>
@@ -146,6 +151,6 @@
 			<br />
 			<span class="copyrightLine2" id="copyrightLine2"><a class="attributionLink" id="attributionLink" href="http://codmrandom.com" target="_blank" rel="noreferrer">Original Site</a> by @DaMagicPlays</span>
 		</div>
-		<script src="cod_loadout.js"></script>
+		<script src="js/cod_loadout.js"></script>
 	</body>
 </html>
