--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
 			<br /><br />
 			<input type="button" id="button1" class="button1" value="Generate Class" onclick="timeout();" />
 			<br />
-			
 			<div class="middle">
 				<div class="outputs" id="outputs">
-					<div class="sticky"><button class="copytoclipboard" onclick="copyToClipboard()"><i class="fas fa-copy"></i></button></div>
+					<div class="sticky"><button class="copytoclipboard copy-button copyText" data-clipboard-action="copy" data-clipboard-target="#copyText" onclick="copyToClipboard()"><i class="fas fa-copy"></i></button></div>
 					<h2><u>Primary Weapon:</u></h2>
 					<h3>
 						<span id="primary"></span>
