rollback last change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="preload" href="css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 		<noscript><link rel="stylesheet" href="css/font-awesome.min.css"></noscript>
-		<script src="js/progressier_script.js" defer></script> 
+		<script src="https://progressier.com/client/script.js?id=dxz1fpzdRMl9TKl1UCkk"></script> 
 		<script src="js/smoothscroll.js" defer></script>
 		<script src="js/sweetalert.js" defer></script>
 		<script src="js/bodylock.js" defer></script>
