remove defer pwa script

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Call of Duty: Mobile Class Generator</title>
 		<meta name="description" content="Generate a random COD Class">
 		<meta name="theme-color" content="#000000"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, minimal-ui" />
 		<meta name="apple-mobile-web-app-capable" content="yes" /> 
 	    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
@@ -34,7 +34,7 @@
 			<br />
 			<div class="middle">
 				<div class="outputs" id="outputs">
-					<div class="sticky" onclick="copyToClipboard()"><button class="copytoclipboard copy-button copyText" aria-label="fas fa-copy" data-clipboard-action="copy" data-clipboard-target="#copyText"><i class="fas fa-copy"></i></button></div>
+					<div class="sticky" onclick="copyToClipboard()"><button class="copytoclipboard copy-button copyText" data-clipboard-action="copy" data-clipboard-target="#copyText"><i class="fas fa-copy"></i></button></div>
 					<h2><u>Primary Weapon:</u></h2>
 					<h3>
 						<span id="primary"></span>
