--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<br />
 			<div class="middle">
 				<div class="outputs" id="outputs">
-					<div class="sticky" onclick="copyToClipboard()"><button class="copytoclipboard copy-button copyText" data-clipboard-action="copy" data-clipboard-target="#copyText"><i class="fas fa-copy"></i></button></div>
+					<div class="sticky" onclick="copyToClipboard()"><button class="copytoclipboard copy-button copyText" aria-label="fas fa-copy data-clipboard-action="copy" data-clipboard-target="#copyText"><i class="fas fa-copy"></i></button></div>
 					<h2><u>Primary Weapon:</u></h2>
 					<h3>
 						<span id="primary"></span>
