--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en-US">
 	<head>
 		<meta charset="UTF-8" />
@@ -11,33 +10,13 @@
 	    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
 	    <link rel="shortcut icon" type="image/ico" href="assets/favicon.ico" />
 		<link rel="stylesheet" href="css/styles.css" />
-		<link rel="stylesheet" href="css/font-awesome.min.css" />
-		<script src="js/smoothscroll.js"></script>
-		<script src="js/sweetalert.js"></script>
-		<script src="js/bodylock.js"></script>
-		<script defer src="js/all.js"></script>
-		<script type="text/javascript">
-			
-			// if ('serviceWorker' in navigator) {
-			//   window.addEventListener('load', function() {
-			//     navigator.serviceWorker.register('sw.js').then(function(registration) {
-			//       // Registration was successful
-			//       console.log('ServiceWorker registration successful with scope: ', registration.scope);
-			//       registration.unregister().then(function(boolean) {
-			// 	      // if boolean = true, unregister is successful
-			// 	      if (boolean === true) {
-			// 	      	console.log("successful unregister")
-			// 	      }
-			// 	    });
-			//     }, function(err) {
-			//       // registration failed :(
-			//       console.log('ServiceWorker registration failed: ', err);
-			//     });
-			//   });
-			// }
-			
-		</script>
-		
+		<link rel="preload" href="css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+		<noscript><link rel="stylesheet" href="css/font-awesome.min.css"></noscript>
+		<!-- <link rel="stylesheet" href="css/font-awesome.min.css" /> -->
+		<script src="js/smoothscroll.js" defer></script>
+		<script src="js/sweetalert.js" defer></script>
+		<script src="js/bodylock.js" defer></script>
+		<script defer src="js/all.js" defer></script>
 	</head>
 
 	<body>
@@ -54,7 +33,7 @@
 			<br />
 			<div class="middle">
 				<div class="outputs" id="outputs">
-					<div class="sticky"><button class="copytoclipboard copy-button copyText" data-clipboard-action="copy" data-clipboard-target="#copyText" onclick="copyToClipboard()"><i class="fas fa-copy"></i></button></div>
+					<div class="sticky" onclick="copyToClipboard()"><button class="copytoclipboard copy-button copyText" aria-label="fas fa-copy" data-clipboard-action="copy" data-clipboard-target="#copyText"><i class="fas fa-copy"></i></button></div>
 					<h2><u>Primary Weapon:</u></h2>
 					<h3>
 						<span id="primary"></span>
@@ -150,6 +129,6 @@
 			<br />
 			<span class="copyrightLine2" id="copyrightLine2"><a class="attributionLink" id="attributionLink" href="http://codmrandom.com" target="_blank" rel="noreferrer">Original Site</a> by @DaMagicPlays</span>
 		</div>
-		<script src="js/cod_loadout.js"></script>
+		<script src="js/cod_loadout.js" defer></script>
 	</body>
 </html>
